# hass-ontology

./: .gitignore  README.md  hacs.json  pyproject.toml  repository.yaml
.github/workflows/: release.yml
.specify/: feature.json  init-options.json  integration.json
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
custom_components/ontology/: __init__.py  button.py  config_flow.py  const.py  coordinator.py  dashboard_sync.py  diagnostics.py  event_listener.py  graph_builder.py  manifest.json  memgraph_client.py  overrides.py  query_service.py  redact.py  repairs.py  semantic_classifier.py  sensor.py  services.yaml  strings.json  validation.py  websocket_api.py
memgraph_addon/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  config.yaml  run.sh
scripts/: test-windows.ps1
specs/001-ha-ontology-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ontology-explorer-v2/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py
tests/_winstubs/: fcntl.py  resource.py
tests/contract/: test_config_flow_contract.py  test_services_contract.py  test_websocket_api_contract.py
tests/integration/: conftest.py  test_classification_survives_resync.py  test_connection_health.py  test_dashboard_sync_tolerance.py  test_delete_during_sync.py  test_first_run_unrelated_data.py  test_incremental_updates.py  test_initial_sync.py  test_overrides_export_import_roundtrip.py  test_overrides_survival.py  (+7 more)
(+29 files in other folders)
